2021/tdam/tdam-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: tdam-client
 namespace: default
spec:
 replicas: 2
 selector:
  matchLabels:
   app: tdam-client
 template:
  metadata:
   labels:
    app: tdam-client
  spec:
   containers:
   - name: tdam-client
     image: aws-path/utah
     ports:
     - containerPort: 80
