2021/tdam/tdam-client-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: tdam-client-service
 namespace: default
spec:
 selector:
  app: tdam-client
 ports:
 - name: http
   port: 80
 type: NodePort
