2021/tdam/tdam-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "client-ingress"
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /apis/v1/health
    alb.ingress.kubernetes.io/certificate-arn: PUT YOUR AWS ARN FOR CERTIFICATE HERE
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
  labels:
    app: tdam-client
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "tdam-client-service"
              servicePort: 80
